error_log.txt
Traceback (most recent call last):
  File "C:\Users\Admin$\Desktop\lead-intelligence-platform\test_imports.py", line 6, in <module>
    from backend.app import app
  File "C:\Users\Admin$\Desktop\lead-intelligence-platform\backend\app.py", line 8, in <module>
    from backend.api.routes import router
  File "C:\Users\Admin$\Desktop\lead-intelligence-platform\backend\api\routes.py", line 9, in <module>
    from backend.api import billing
  File "C:\Users\Admin$\Desktop\lead-intelligence-platform\backend\api\billing.py", line 15
    return {
           ^
SyntaxError: '{' was never closed
Testing Application Imports...

--- ERROR FOUND ---
-------------------

